[gd_scene load_steps=9 format=3 uid="uid://bvt0d1t1drxmb"]

[ext_resource type="Script" path="res://levels/Level.gd" id="1"]
[ext_resource type="Script" path="res://levels/Storge.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cg75okt0ihbtr" path="res://Resource/DELETE.png" id="3"]
[ext_resource type="Script" path="res://levels/DeletePanel.gd" id="4"]
[ext_resource type="Theme" uid="uid://dnidbxs13ujws" path="res://Resource/big.tres" id="5"]
[ext_resource type="Theme" uid="uid://dqny2mohckv7v" path="res://Resource/mid.tres" id="6"]
[ext_resource type="Theme" uid="uid://352xg2wd5mvp" path="res://Resource/mid-small.tres" id="7"]

[sub_resource type="GDScript" id="GDScript_biqgy"]
script/source = "extends Control
"

[node name="Level" type="Node2D"]
script = ExtResource("1")

[node name="UnitStorge" type="HBoxContainer" parent="."]
offset_left = 64.0
offset_top = 62.0
offset_right = 808.0
offset_bottom = 126.0

[node name="EnergyPanel" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Storge1" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge2" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge3" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge4" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge5" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge6" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge7" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge8" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="Storge9" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("2")

[node name="DeletePanel" type="PanelContainer" parent="UnitStorge"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
script = ExtResource("4")

[node name="DELETE" type="Sprite2D" parent="UnitStorge/DeletePanel"]
position = Vector2(32, 32)
texture = ExtResource("3")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="EnergyTimer" type="Timer" parent="."]
autostart = true

[node name="ENERGY" type="Label" parent="."]
offset_left = 88.0
offset_top = 72.0
offset_right = 152.0
offset_bottom = 96.0
theme = ExtResource("6")
text = "0"

[node name="ENSPEED" type="Label" parent="."]
offset_left = 80.0
offset_top = 104.0
offset_right = 144.0
offset_bottom = 128.0
theme = ExtResource("7")
text = "0 /s"

[node name="Container" type="Control" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_direction = 1
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1248.0
offset_right = 1280.0
offset_bottom = 32.0
grow_vertical = 2
pivot_offset = Vector2(16, 16)
size_flags_horizontal = 8
size_flags_vertical = 8
script = SubResource("GDScript_biqgy")
metadata/_edit_use_anchors_ = true

[node name="Buttons" type="GridContainer" parent="Container"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 88.0
offset_right = -3.0
offset_bottom = 178.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
columns = 2

[node name="Back" type="Button" parent="Container/Buttons"]
layout_mode = 2
theme = ExtResource("5")
text = "BACK"

[node name="Stop" type="Button" parent="Container/Buttons"]
process_mode = 3
layout_mode = 2
theme = ExtResource("5")
text = "STOP"

[node name="Debug" type="Button" parent="Container/Buttons"]
layout_mode = 2
theme = ExtResource("5")
text = "DEBUG"

[node name="DebugE" type="Button" parent="Container/Buttons"]
layout_mode = 2
theme = ExtResource("5")
text = "DEBUG"

[node name="WAVES" type="Label" parent="Container"]
layout_mode = 2
offset_left = -160.0
offset_top = 64.0
offset_right = -37.0
offset_bottom = 88.0
theme = ExtResource("5")
text = "LEFT WAVES: 0"

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="EnergyTimer" to="." method="_on_EnergyTimer_timeout"]
[connection signal="pressed" from="Container/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Container/Buttons/Stop" to="." method="_on_Stop_pressed"]
[connection signal="pressed" from="Container/Buttons/Debug" to="." method="_on_Debug_pressed"]
[connection signal="pressed" from="Container/Buttons/DebugE" to="." method="_on_DebugE_pressed"]
